<resources>
    <string name="app_name">MyAddress</string>
    <string name="lbl_txtview1">Digite seu CEP</string>
    <string name="editText_cep" />
    <string name="lbl_txtview2">Endereço</string>
    <string name="lbl_rua">Rua:</string>
    <string name="lbl_bairro">Bairro:</string>
    <string name="lbl_cidade">Cidade:</string>
    <string name="lbl_cep">CEP:</string>
    <string name="lbl_endereco">Endereço:</string>
    <string name="editText_rua" />
    <string name="lbl_complemento">Complemento:</string>
    <string name="lbl_uf">UF:</string>
    <string name="editText_compl" />
    <string name="editText_bairro" />
    <string name="editText_cidade" />
    <string name="editText_uf" />
    <string name="btn_buscar">Buscar Endereço</string>
</resources>
