<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_txtview1"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText_cep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/editText_cep" />

    <Button
        android:id="@+id/btn_buscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_buscar" />

    <TextView
        android:id="@+id/lbl_endereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_txtview2"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/lbl_rua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_rua" />

    <EditText
        android:id="@+id/editText_rua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText_rua" />

    <TextView
        android:id="@+id/lbl_complemento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_complemento" />

    <EditText
        android:id="@+id/editText_compl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText_compl" />

    <TextView
        android:id="@+id/lbl_bairro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_bairro" />

    <EditText
        android:id="@+id/editText_bairro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText_bairro" />

    <TextView
        android:id="@+id/lbl_cidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_cidade" />

    <EditText
        android:id="@+id/editText_cidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText_cidade" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_uf" />

    <EditText
        android:id="@+id/editText_uf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText_uf" />

</LinearLayout>